# pause-spotify

./: .clang-format  .clang-tidy.json  .gitignore  CMakeLists.txt  README.md  setup.py  vcpkg.json
cmake/: ClangTidy.cmake  CompilerWarnings.cmake
src/: CMakeLists.txt  app_config.cpp  app_config.hpp  app_options.cpp  app_options.hpp  application.cpp  application.hpp  audio_output_device.cpp  audio_output_device.hpp  audio_session.cpp  audio_session.hpp  audio_session_controller.cpp  audio_session_controller.hpp  audio_session_list.cpp  audio_session_list.hpp  audio_session_manager.cpp  audio_session_manager.hpp  com_error.cpp  com_error.hpp  com_exception.cpp  com_exception.hpp  com_ptr.hpp  default_audio_rendering_endpoint.cpp  default_audio_rendering_endpoint.hpp  expected_helper.hpp  logger.cpp  logger.hpp  main.cpp  misc.cpp  misc.hpp  new_audio_session_notifier.cpp  new_audio_session_notifier.hpp  nonspotify_audio_session_event_notifier.cpp  nonspotify_audio_session_event_notifier.hpp  pause_spotify_app.cpp  pause_spotify_app.hpp  spotify_app.cpp  spotify_app.hpp  windows_error.cpp  windows_error.hpp  (+2 more)
